# canvas-desktop

./: .gitignore  Cargo.toml  PLAN.md  PROMPT.md  README.md
crates/canvas-app/: Cargo.toml
crates/canvas-app/src/: editor.rs  gallery.rs  loader.rs  main.rs  menus.rs  settings.rs  surface.rs  watcher.rs  welcome.rs
crates/canvas-core/: Cargo.toml
crates/canvas-core/src/: align.rs  command.rs  document.rs  error.rs  layer.rs  lib.rs  snap.rs
crates/canvas-io/: Cargo.toml
crates/canvas-io/src/: lib.rs  load.rs  metadata.rs  save.rs  sidecar.rs  svg.rs  thumbs.rs
crates/canvas-io/tests/: kill_during_save.rs
crates/canvas-render/: Cargo.toml
crates/canvas-render/examples/: bake_blur.rs  bake_filters.rs  save_roundtrip.rs  text_probe.rs
crates/canvas-render/src/: blur.rs  blur.wgsl  color_filter.wgsl  lib.rs  scene.rs
crates/canvas-shell/: Cargo.toml
crates/canvas-shell/examples/: instance_probe.rs  registry_probe.rs
crates/canvas-shell/src/: integration.rs  lib.rs  linux.rs  macos.rs  single_instance.rs  windows.rs
