[workspace]
resolver = "2"
members = [
    "crates/canvas-core",
    "crates/canvas-render",
    "crates/canvas-io",
    "crates/canvas-shell",
    "crates/canvas-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
canvas-core = { path = "crates/canvas-core" }
canvas-render = { path = "crates/canvas-render" }
canvas-io = { path = "crates/canvas-io" }
canvas-shell = { path = "crates/canvas-shell" }

# UI + GPU: eframe 0.35 y vello 0.9 comparten wgpu 29 — no cambiar uno sin el otro.
# `persistence` restaura tamaño/posición de la ventana entre sesiones.
eframe = { version = "0.35", default-features = false, features = [
    "wgpu",
    "default_fonts",
    "x11",
    "wayland",
    "persistence",
] }
vello = "0.9"

image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "gif",
    "bmp",
] }
kamadak-exif = "0.6"
# Preservación de bloques ICC/EXIF tal cual (JPEG APP1/APP2, PNG iCCP/eXIf,
# WebP RIFF). lcms2 NO sirve para esto: es un motor de conversión de color.
img-parts = "0.3"
resvg = "0.45"
# Texto: parley 0.11 comparte peniko 0.6 con vello 0.9 (validado con cargo tree).
parley = "0.11"
rfd = "0.15"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6"
tempfile = "3"
interprocess = "2"
notify = "8"
# Menús nativos (Windows: init_for_hwnd; en Linux exigiría GTK → fallback egui).
muda = "0.17"
raw-window-handle = "0.6"
windows = { version = "0.62", features = ["Win32_Storage_FileSystem"] }

[profile.dev]
# vello/wgpu en debug puro son inusablemente lentos; optimiza las dependencias.
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
