[package]
name = "canvas-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "canvas-desktop"
path = "src/main.rs"

[dependencies]
canvas-core = { workspace = true }
canvas-render = { workspace = true }
canvas-io = { workspace = true }
canvas-shell = { workspace = true }
eframe = { workspace = true }
vello = { workspace = true }
rfd = { workspace = true }
rayon = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
notify = { workspace = true }

# Menús nativos solo en Windows (en Linux muda exige GTK: allí se usa una
# barra de menús egui como fallback).
[target.'cfg(windows)'.dependencies]
muda = { workspace = true }
raw-window-handle = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
