[package]
name = "canvas-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
canvas-core = { workspace = true }
image = { workspace = true }
kamadak-exif = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# La sustitución atómica del archivo destino necesita ReplaceFileW; es la
# única pieza específica de plataforma de este crate y va tras #[cfg(windows)].
[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
