[package]
name = "canvas-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
# Instancia única e IPC local (named pipe en Windows, socket local en Unix).
interprocess = { workspace = true }

# Registro de asociaciones y notificación al shell (solo Windows).
[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Storage_EnhancedStorage",
] }

[dev-dependencies]
tracing-subscriber = { workspace = true }
